--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,5 +10,12 @@
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+<form action="users">
+<select name="userId">
+    <option value="1">User 1</option>
+    <option value="2">User 2</option>
+</select>
+    <button type="submit">Select</button>
+</form>
 </body>
 </html>
